Override default movement to prevent wrapping

--- a/src/components/leaf.module.css
+++ b/src/components/leaf.module.css
@@ -1,10 +1,9 @@
-
 .normal-mode-cursor {
-  background-color: rgb(236, 215, 215);
+  background-color: black;
   color: white;
 
-  animation: cursor-animation 1s linear infinite;
-  animation-timing-function: steps(2, jump-none);
+  /* animation: cursor-animation 1s linear infinite;
+  animation-timing-function: steps(2, jump-none); */
 }
 
 @keyframes cursor-animation {
@@ -18,6 +17,10 @@
   }
 }
 
+.empty-space::before {
+  content: ' ';
+}
+
 .title {
-  color: '#389edb';
+  color: #389edb;
 }
